# ocaml-mpst-light

./: .ocamlinit  README.md  base.ml  clean.sh  compile_without_dune.sh  dune  index.html  mpst_light.ml  mpst_no_lin_check.ml
concur-shims/lwt/: concur_shims_lwt.ml
examples/: dune  example.ml
examples/static/: dune  example.ml
static/: mpst_static.ml
static-linearity/: dune
web/: dune  examples.ml  index.html  ppx_linocaml_enable.ml  toplevel.ml
